Clickable error messages on the web app